<resources>
    <string name="app_name">E-Lang</string>
    <string name="background">Background</string>
    <string name="accountphoto">accountPhoto</string>
    <string name="unknown">unknown</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu_button">menu_button</string>
    <string name="penawaran_harga">Penawaran Harga</string>
    <string name="bid">Bid</string>
    <string name="transaksi_pembayaran">TRANSAKSI PEMBAYARAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s Join Our Auction</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="input_not_full">Input Tidak Lengkap</string>
    <string name="nama">Nama</string>
    <string name="nomorTelpon">nomorTelpon</string>
    <string name="photo_profile">photo-profile</string>
    <string name="id">id</string>
    <string name="email">email</string>
    <string name="alamat">alamat</string>
    <string name="password_not_same">Password not same</string>
    <string name="pengajuan_pelelangan">Pengajuan Pelelangan</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_awal">Harga Awal</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="mulai_lelang">Mulai Lelang</string>
    <string name="akhir_lelang">Akhir Lelang</string>
    <string name="ajukan">Ajukan</string>
    <string name="detail_barangku">Detail Barangku</string>
    <string name="status">Status</string>
    <string name="harga">Harga</string>
    <string name="tawaran_anda">Tawaran Anda</string>
    <string name="ajukan_tawaran">Ajukan Tawaran</string>
    <string name="barang_dilelang">Barang Dilelang</string>
    <string name="logout">Logout</string>
    <string name="penawaran_saya">Penawaran Saya</string>
    <string name="besar_tawaran">Besar Tawaran</string>
    <string name="bayar">Bayar</string>
    <string name="upload_bukti_bayar">Upload Bukti Bayar</string>
    <string name="pembayaran_saya">Pembayaran Saya</string>
</resources>