<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activity.AjukanPelelanganActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengajuan_pelelangan"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginVertical="20dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="25dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nama_barang"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/harga_awal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="number"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/deskripsi"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="text"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_lelang_start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/mulai_lelang"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="datetime"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_lelang_end"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/akhir_lelang"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="datetime"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/item_img"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textCursorDrawable="@null"
                android:drawableRight="@drawable/upload"
                android:drawablePadding="5dp"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:onClick="pick"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/blue"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_create_auction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/ajukan"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>