<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activity.MyBidActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/penawaran_saya"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginVertical="20dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="25dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/grey"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/nama"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:id="@+id/et_name"
                        android:paddingLeft="15dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/deskripsi"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_description" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/grey"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/mulai_lelang"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_lelang_start" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/akhir_lelang"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_lelang_end" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/grey"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/besar_tawaran"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_price" />
                </TableRow>
            </TableLayout>
            <ImageView
                android:id="@+id/picture"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/img_pay_proof"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textCursorDrawable="@null"
                android:drawableRight="@drawable/upload"
                android:drawablePadding="5dp"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:onClick="pick"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/blue"
                android:text="@string/upload_bukti_bayar"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/bayar"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
