<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activity.DetailBarangkuActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_barangku"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginVertical="20dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="25dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/grey"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/nama"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:id="@+id/et_name"
                        android:paddingLeft="15dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/harga"
                        android:textSize="15sp"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:id="@+id/et_price"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp"
                        android:layout_width="match_parent"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/grey"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/deskripsi"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_description" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/mulai_lelang"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_lelang_start" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/grey"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/akhir_lelang"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_lelang_end" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <TextView android:gravity="left"
                        android:text="@string/status"
                        android:textSize="15sp"
                        />

                    <TextView android:gravity="left"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:id="@+id/et_status" />
                </TableRow>
            </TableLayout>
            <ImageView
                android:id="@+id/picture"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
